--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/microservices": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "cpx": "^1.5.0",
     "kafkajs": "^2.2.4",
     "reflect-metadata": "^0.1.13",
@@ -37,6 +39,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
